# pudica

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: class_diagram.md  flow.md
src/pudica/: __init__.py  cli.py  core.py  encrypt.py  encryptor.py  errors.py  keychain.py  keyfile.py  pudica.py  vault.py
tests/: test_encrypt.py  test_keyfile.py  test_vault.py
