[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pudica"
authors = [{name = "Kyle Shaver"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires = [
    "cryptography >= 36.0.2"
]

[project.optional-dependencies]
test = [
    "pytest >=7.1.0",
]